# dunge

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/: README.md
.github/workflows/: ci.yml  rust.yml
dunge/: Cargo.toml  README.md
dunge/dunge_derive/: Cargo.toml
dunge/dunge_derive/src/: lib.rs  vertex.rs
dunge/dunge_macros/: Cargo.toml
dunge/dunge_macros/src/: lib.rs
dunge/dunge_shader/: Cargo.toml  template.wgsl  template_common.wgsl  template_post.wgsl
dunge/dunge_shader/src/: elements.rs  generate.rs  lib.rs  nodes.rs  out.rs  parts.rs  scheme.rs  shader.rs  templater.rs
dunge/dunge_shader/src/parts/: ambient.rs  color.rs  post.rs  sources.rs  spaces.rs  textures.rs  vertex.rs
dunge/src/: _color.rs  _layout.rs  _shader.rs  _time.rs  _vertex.rs  _window.rs  bind.rs  bind_groups.rs  buffer.rs  camera.rs  canvas.rs  color.rs  compute.rs  context.rs  depth_frame.rs  draw.rs  el.rs  element.rs  error.rs  format.rs  frame.rs  group.rs  groups.rs  handles.rs  init.rs  instance.rs  layer.rs  layout.rs  lib.rs  loop.rs  mesh.rs  pipeline.rs  pipline.rs  posteffect.rs  postproc.rs  render.rs  render_frame.rs  resources.rs  runtime.rs  scheme.rs  (+22 more)
dunge/src/framebuffer/: buffer.rs  depth_frame.rs  render_frame.rs
dunge/src/shader_data/: _light.rs  _space.rs  ambient.rs  camera.rs  color.rs  data.rs  globals.rs  instance.rs  len.rs  light.rs  lights.rs  post.rs  source.rs  space.rs  spaces.rs  texture.rs  textures.rs
dunge/src/shaders/: color.wgsl  flat.wgsl  light.wgsl  post.wgsl  post_antialiasing.wgsl  post_ssaa.wgsl  size.wgsl  space.wgsl  textured.wgsl
dunge/tests/: .gitignore  atomic_compute_shader.wgsl  compute_dispatch.rs  compute_dispatch.wgsl  compute_shader.rs  cs.rs  cs_array.wgsl  cs_array2d.wgsl  cs_array_mut.wgsl  cs_array_rw.wgsl  cs_dynamic_array.wgsl  cs_dynamic_array_mut.wgsl  cs_dynamic_array_rw.wgsl  cs_empty.wgsl  rs.rs  rs_discard.wgsl  rs_discard_if.wgsl  rs_dyn_false.wgsl  rs_dyn_true.wgsl  rs_if.wgsl  rs_storage.wgsl  rs_zero.wgsl  shader.rs  shader.wgsl  shader_branch.wgsl  shader_branch0.wgsl  shader_branch1.wgsl  shader_branch2.wgsl  shader_calc.wgsl  simple_compute_shader.wgsl  triangle.rs  triangle_color.rs  triangle_discard.rs  triangle_discard.wgsl  triangle_group.rs  triangle_group.wgsl  triangle_index.rs  triangle_index.wgsl  triangle_instance.rs  triangle_instance.wgsl  (+2 more)
dunge_macros/: Cargo.toml
dunge_macros/src/: group.rs  ident.rs  instance.rs  lib.rs  member.rs  utils.rs  vertex.rs
dunge_shader/: Cargo.toml
dunge_shader/src/: access.rs  atomic.rs  branch.rs  context.rs  convert.rs  cs_module.rs  define.rs  discard.rs  dyn_expr.rs  eval.rs  glam.rs  group.rs  instance.rs  lib.rs  math.rs  matrix.rs  module.rs  nodes.rs  op.rs  ops.rs  out.rs  ret.rs  shader.rs  sl.rs  templater.rs  texture.rs  types.rs  vec.rs  vector.rs  vertex.rs  zero.rs
dunge_shader/src/parts/: instance.rs  post.rs  vertex.rs  view.rs
dunge_tools/: Cargo.toml
dunge_winit/: Cargo.toml
dunge_winit/src/: app.rs  canvas.rs  lib.rs  reactor.rs  runtime.rs  time.rs  window.rs
examples/: Cargo.toml  README.md
examples/cube/: Cargo.toml  main.rs
examples/cube/src/: data.rs  lib.rs  main.rs
examples/cube_android/: Cargo.toml  build.rs
examples/cube_android/android/: Cargo.toml
examples/cube_android/android/src/: lib.rs
examples/cube_color/: Cargo.toml
examples/cube_color/src/: main.rs
examples/cube_wasm/: Cargo.toml  README.md  build.rs
examples/cube_wasm/src/: lib.rs
examples/cube_wasm/static/: style.css
examples/cube_wasm/wasm/: Cargo.toml
examples/cube_wasm/wasm/src/: lib.rs
examples/file_server/: Cargo.toml
examples/file_server/src/: main.rs
examples/file_server/static/: index.html
examples/run_wasm/: Cargo.toml
examples/run_wasm/src/: main.rs
examples/run_wasm/templates/: index.html
examples/scene/: Cargo.toml
examples/scene/src/: atlas.json  atlas.rs  font.rs  lib.rs  main.rs  models.rs
examples/scene_android/: Cargo.toml  build.rs
examples/scene_android/android/: Cargo.toml
examples/scene_android/android/src/: lib.rs
examples/scene_android/src/: lib.rs  main.rs  models.rs
examples/scene_wasm/: Cargo.toml  build.rs
examples/scene_wasm/src/: main.rs
examples/scene_wasm/static/: index.html
examples/scene_wasm/wasm/: Cargo.toml
examples/scene_wasm/wasm/src/: lib.rs
examples/serv_wasm/: Cargo.toml
examples/serv_wasm/src/: main.rs
examples/serve/: Cargo.toml
examples/serve/src/: lib.rs  main.rs
examples/serve/static/: index.html
examples/ssaa/: Cargo.toml
examples/ssaa/src/: lib.rs  main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: lib.rs  main.rs
examples/utils/: Cargo.toml
examples/utils/src/: camera.rs  lib.rs  png.rs  time.rs
examples/utils_build/: Cargo.toml
examples/utils_build/src/: lib.rs
examples/wasm/: Cargo.toml
examples/wasm/src/: lib.rs
examples/window/: Cargo.toml
examples/window/src/: main.rs
examples/window2/: Cargo.toml
examples/window2/src/: main.rs
helpers/: Cargo.toml
helpers/src/: channel.rs  futures.rs  image.rs  lib.rs  serv.rs  test.rs
shaders/: post0.wgsl  post2.wgsl  sh0.wgsl  sh1.wgsl
src/: camera.rs  canvas.rs  color.rs  context.rs  frame.rs  instance.rs  layout.rs  lib.rs  loop.rs  mesh.rs  render.rs  size.rs  storage.rs  texture.rs  time.rs  vertex.rs
src/shaders/: post.wgsl  textured.wgsl
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/templates/: index.html
