[workspace]
resolver = "2"
members = [
    "dunge",
    "dunge_macros",
    "dunge_shader",
    "examples/cube",
    "examples/ssaa",
    "examples/triangle",
    "examples/wasm",
    "examples/window",
    "helpers",
    "xtask",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["nanoqsh"]
keywords = ["graphics", "wgpu"]
documentation = "https://docs.rs/dunge"
readme = "README.md"
repository = "https://github.com/nanoqsh/dunge"
rust-version = "1.76"

[workspace.dependencies]
dunge = { version = "=0.3.0", path = "dunge" }
dunge_macros = { version = "=0.3.0", path = "dunge_macros" }
dunge_shader = { version = "=0.3.0", path = "dunge_shader" }
bytemuck = "1.13"
glam = "0.25"
env_logger = "0.11"
log = "0.4"

[workspace.lints.clippy]
cast-lossless = "deny"
flat-map-option = "deny"
manual-assert = "deny"
match-wildcard-for-single-variants = "deny"
missing-assert-message = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
unwrap-used = "deny"

[profile.dev]
opt-level = 1
panic = "abort"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.ci]
inherits = "dev"
opt-level = 1

[profile.ci.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
