[workspace]
resolver = "3"
members = [
    "dunge",
    "dunge_macros",
    "dunge_shader",
    "dunge_winit",
    "examples/*",
    "helpers",
    "xtask",
]

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "MIT"
authors = ["nanoqsh"]
keywords = ["graphics", "wgpu"]
documentation = "https://docs.rs/dunge"
repository = "https://github.com/nanoqsh/dunge"
rust-version = "1.86"

[workspace.dependencies]
dunge = { version = "=0.3.3", path = "dunge" }
dunge_macros = { version = "=0.3.3", path = "dunge_macros" }
dunge_shader = { version = "=0.3.3", path = "dunge_shader" }
dunge_winit = { version = "=0.3.3", path = "dunge_winit" }
askama = { version = "0.13", default-features = false }
async-channel = "2.1"
async-executor = "1.8"
async-net = "2.0"
bytemuck = "1.13"
console_error_panic_hook = "0.1"
env_logger = "0.11"
futures-concurrency = "7.6"
futures-lite = "2.1"
glam = "0.30"
http-body-util = "0.1"
hyper = "1"
instant = "0.1"
log = "0.4"
naga = "25.0"
parking = "2.2"
png = "0.17"
proc-macro2 = "1.0"
quote = "1.0"
smol-hyper = "0.1"
syn = { version = "2.0", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = { version = "25.0", default-features = false }
web-sys = "0.3"
winit = { version = "0.30", default-features = false }
[workspace.lints.rust]
elided-lifetimes-in-paths = "deny"

[workspace.lints.clippy]
cast-lossless = "deny"
flat-map-option = "deny"
manual-assert = "deny"
match-wildcard-for-single-variants = "deny"
missing-assert-message = "deny"
semicolon-if-nothing-returned = "deny"
trivially-copy-pass-by-ref = "deny"
use-self = "deny"
unwrap-used = "deny"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.ci]
inherits = "dev"
opt-level = 1

[profile.ci.package."*"]
opt-level = 1

[profile.ci.build-override]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
