[package]
name = "dunge"
description = "Simple and portable 3d render library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dunge_macros.workspace = true
dunge_shader.workspace = true
bytemuck.workspace = true
glam.workspace = true
instant = { version = "0.1", optional = true }
log.workspace = true
wgpu = { version = "25.0", default-features = false, features = ["naga-ir"] }

[dependencies.winit]
version = "0.30"
default-features = false
features = ["rwh_06", "x11"]
optional = true

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
wgpu = { version = "25.0", default-features = false, features = ["vulkan"] }

[target.'cfg(target_family = "windows")'.dependencies]
wgpu = { version = "25.0", default-features = false, features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "25.0", default-features = false, features = ["metal"] }

[target.'cfg(target_family = "wasm")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"], optional = true }
wgpu = { version = "25.0", default-features = false, features = ["webgpu"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
parking = "2.2"

[target.'cfg(target_os = "android")'.dependencies.winit]
version = "0.30"
default-features = false
features = ["android-native-activity"]
optional = true

[dev-dependencies]
dunge_shader = { workspace = true, features = ["wgsl"] }
helpers = { path = "../helpers", features = ["png"] }

[features]
winit = ["dep:instant", "dep:winit"]
wgsl = ["dunge_shader/wgsl"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "wasm32-unknown-unknown",
]
