[package]
name = "dunge"
description = "Simple and portable 3d render library"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
wgsl = ["dunge_shader/wgsl"]

[dependencies]
dunge_macros.workspace = true
dunge_shader.workspace = true
bytemuck.workspace = true
glam = { workspace = true, features = ["bytemuck"] }
log.workspace = true
wgpu = { workspace = true, features = ["naga-ir"] }

[target.'cfg(all(target_family = "unix", not(target_os = "macos")))'.dependencies]
wgpu = { workspace = true, features = ["vulkan"] }

[target.'cfg(target_family = "windows")'.dependencies]
wgpu = { workspace = true, features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wgpu = { workspace = true, features = ["webgpu"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
parking.workspace = true

[dev-dependencies]
dunge_shader = { workspace = true, features = ["wgsl"] }
helpers = { path = "../helpers", features = ["png"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "wasm32-unknown-unknown",
]
