[package]
name = "dunge_macros"
version = "0.2.0"
edition = "2021"
description = "Procmacro for the dunge library"
license = "MIT"
documentation = "https://docs.rs/dunge"
repository = "https://github.com/nanoqsh/dunge"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
