[package]
name = "dunge_macros"
description = "Procmacro for the dunge library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"

[lints]
workspace = true
