[package]
name = "dunge_macros"
description = "Procmacro for the dunge library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true

[dev-dependencies]
helpers.workspace = true

[lints]
workspace = true
