[package]
name = "dunge_shader"
description = "Shader generator for the dunge library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
wgsl = ["naga/wgsl-out"]

[dependencies]
glam.workspace = true
log.workspace = true
naga.workspace = true

[lints]
workspace = true
