[package]
name = "dunge_tools"
version = "0.2.3"
edition = "2021"
description = "Additional tools for the dunge library"
license = "MIT"
documentation = "https://docs.rs/dunge"
repository = "https://github.com/nanoqsh/dunge"

[dependencies]
dunge = { version = "=0.2.3", path = "../dunge" }

[lints]
workspace = true
