[package]
name = "dunge_tools"
version = "0.3.0-alpha"
edition = "2021"
description = "Additional tools for the dunge library"
license = "MIT"
documentation = "https://docs.rs/dunge"
repository = "https://github.com/nanoqsh/dunge"

[dependencies]
dunge = { version = "=0.3.0-alpha", path = "../dunge" }

[lints]
workspace = true
