[package]
name = "dunge_tools"
description = "Additional tools for the dunge library"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
documentation = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
dunge = { workspace = true }

[lints]
workspace = true
