[package]
name = "dunge_winit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-channel.workspace = true
dunge.workspace = true
instant.workspace = true
log.workspace = true
winit = { workspace = true, features = ["rwh_06", "x11"] }

[target.'cfg(target_family = "wasm")'.dependencies]
instant = { workspace = true, features = ["wasm-bindgen"] }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }

[lints]
workspace = true
