[package]
name = "helpers"
version = "0.1.0"
edition = { workspace = true }
publish = false

[dependencies]
async-channel = "2.1"
async-executor = { version = "1.8", optional = true }
async-net = { version = "2.0", optional = true }
bytemuck = { workspace = true }
futures-lite = "2.1"
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", features = ["http1", "server"], optional = true }
png = { version = "0.17", optional = true }
smol-hyper = { version = "0.1", optional = true }

[features]
png = ["dep:png"]
serv = [
    "dep:async-executor",
    "dep:async-net",
    "dep:http-body-util",
    "dep:hyper",
    "dep:smol-hyper",
]

[lints]
workspace = true
