[package]
name = "helpers"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
png = ["dep:png"]
serv = [
    "dep:async-executor",
    "dep:async-net",
    "dep:http-body-util",
    "dep:hyper",
    "dep:smol-hyper",
]

[dependencies]
async-channel.workspace = true
async-executor = { workspace = true, optional = true }
async-net = { workspace = true, optional = true }
bytemuck.workspace = true
futures-lite.workspace = true
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, features = ["http1", "server"], optional = true }
png = { workspace = true, optional = true }
smol-hyper = { workspace = true, optional = true }

[lints]
workspace = true
