[package]
name = "cube"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cube_bin"
path = "src/main.rs"

[dependencies]
dunge = { path = "../../dunge", default-features = false }
utils = { path = "../utils" }
env_logger = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
dunge = { path = "../../dunge" }
