[package]
name = "cube"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "cube_bin"
path = "src/main.rs"

[dependencies]
# for derive macro
dunge.workspace = true
dunge_winit.workspace = true
env_logger.workspace = true
futures-concurrency.workspace = true

[lints]
workspace = true
