[package]
name = "scene"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "scene_bin"
path = "src/main.rs"

[dependencies]
dunge = { path = "../../dunge" }
utils = { path = "../utils" }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
dunge = { path = "../../dunge", features = ["x11"] }
