[package]
name = "scene_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
dunge = { path = "../../dunge" }
utils = { path = "../utils" }
android_logger = "0.11"
log = "0.4"
ndk-glue = "0.7"

[workspace]
members = ["."]

[package.metadata.android.sdk]
min_sdk_version = 16
target_sdk_version = 30
