[package]
name = "triangle"
version = "0.1.0"
edition = { workspace = true }
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "triangle_bin"
path = "src/main.rs"

[dependencies]
dunge = { workspace = true, features = ["winit"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }
helpers = { path = "../../helpers" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[lints]
workspace = true
