[package]
name = "triangle"
version = "0.1.0"
edition = { workspace = true }
publish = false

[[bin]]
name = "triangle_bin"
path = "src/main.rs"

[dependencies]
dunge = { workspace = true, features = ["winit"] }
env_logger = { workspace = true }
helpers = { path = "../../helpers" }

[lints]
workspace = true
