[package]
name = "wasm"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
cube = { path = "../cube", optional = true }
dunge = { workspace = true, features = ["winit"] }
ssaa = { path = "../ssaa", optional = true }
triangle = { path = "../triangle", optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
cube = ["dep:cube"]
ssaa = ["dep:ssaa"]
triangle = ["dep:triangle"]

[lints]
workspace = true
