[package]
name = "wasm"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
cube = ["dep:cube"]
ssaa = ["dep:ssaa"]
triangle = ["dep:triangle"]

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook.workspace = true
cube = { path = "../cube", optional = true }
dunge_winit.workspace = true
ssaa = { path = "../ssaa", optional = true }
triangle = { path = "../triangle", optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[lints]
workspace = true
