[package]
name = "window"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
async-io.workspace = true
dunge_winit.workspace = true
env_logger.workspace = true
futures-concurrency.workspace = true
futures-lite.workspace = true
winit.workspace = true

[lints]
workspace = true
