[package]
name = "window2"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
# for derive macro
dunge.workspace = true
dunge_winit.workspace = true
env_logger.workspace = true
futures-concurrency.workspace = true
futures-lite.workspace = true
smol.workspace = true

[lints]
workspace = true
