[package]
name = "scene_wasm"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
scene = { path = "../../scene" }
dunge = { path = "../../../dunge" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
codegen-units = 1
lto = true
